--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,9 +50,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.doublesymmetry:kotlinaudio:v2.1.0'
+    // implementation 'com.github.doublesymmetry:kotlinaudio:v2.1.0'
     // used when building against local maven
-//    implementation "com.github.doublesymmetry:kotlin-audio:2.1.0"
+    // implementation "com.github.doublesymmetry:kotlin-audio:2.1.0"
+    implementation 'com.github.CTZZG:KotlinAudio:main'
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"
